# chat-client

./: pyproject.toml
app/: Chat_Thread.py  Cliente.py  __main__.py  chat.py  conexao_socket.py  criptografia.py  graceful_exit.py  interface.py  menu.py  my_enum.py  server_handler.py  shared.py  util.py
