[tool.poetry]
name = "chat-client"
version = "0.1.0"
description = ""
authors = ["williancsmelo <melo.williancs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
requests = "^2.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
